what-we-do segment updated

--- a/index.html
+++ b/index.html
@@ -379,6 +379,9 @@
           </div>
           <div class="row mt-5">
             <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/hardware.png" alt="">
+              </div>
               <h6><b>Hardware</b></h6>
               <p>Choose from Aflax’s Andriod compact digital signage media player that plugs directly into the back of
                 any
@@ -386,12 +389,18 @@
                 removes the need for any external hardware.</p>
             </div>
             <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/cloude.png" alt="">
+              </div>
               <h6><b>Cloud Based</b></h6>
               <p>The Aflax interactive digital signage platform is an extremely intuitive digital tool which allows you
                 to easily create, edit, manage, deploy and report on digital content in real-time. It’s all cloud-based
                 which means you don’t have to worry about downloading any software.</p>
             </div>
             <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/project.png" alt="">
+              </div>
               <h6><b>Custom Projects</b></h6>
               <p>Our team can deliver custom applications and creative digital experiences, bespoke to your unique
                 project requirements. Our FREE consultancy process helps us to understand who you want to communicate
@@ -402,18 +411,27 @@
 
           <div class="row mt-5">
             <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/signage.png" alt="">
+              </div>
               <h6><b>Internal Signage</b></h6>
               <p>From internal communications to reception displays you can broadcast videos or content in real-time on
                 screens. With Aflax, digital signage can instantly inform and inspire your audience which increases
                 staff engagement and productivity.</p>
             </div>
             <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/menu.png" alt="">
+              </div>
               <h6><b>Menu Boards</b></h6>
               <p>Drive upsells, cross-sells and average purchase amounts at point of sale by displaying dynamic and
                 relevant content to your customers with digital menu boards. The ease of implementation means you can
                 get up and running in minutes, with minimal disruption to your store or restaurant.</p>
             </div>
             <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/outdoor.png" alt="">
+              </div>
               <h6><b>Outdoor Signage</b></h6>
               <p>From roadside totems to outdoor menu boards, there is a wealth of opportunity for using outdoor digital
                 signage to drive traffic to your business. With Aflax, outdoor totems can generate huge footfall by
@@ -423,16 +441,25 @@
 
           <div class="row mt-5">
             <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/video.png" alt="">
+              </div>
               <h6><b>Video Walls</b></h6>
               <p>Build video walls of virtually any size or orientation. Enjoy seamless content playback across multiple
                 screens, and even build interactive video walls and multi-screen kiosks.</p>
             </div>
             <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/shelf.png" alt="">
+              </div>
               <h6><b>Digital Shelf Edge</b></h6>
               <p>Deploy promotional campaigns straight to the shelf edge. Directly influence in-store purchases with
                 product videos, dynamic pricing and offers, loyalty card incentives, online reviews and much more.</p>
             </div>
             <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/interactive.png" alt="">
+              </div>
               <h6><b>Interactive and Intelligent Signage</b></h6>
               <p>From place and learn and intelligent menu boards to magic mirrors and touch sensor experiences, Aflax
                 provides you with all the tools to build fully interactive applications and signage content with ease.
@@ -712,8 +739,10 @@
                 <h4>App 1</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -726,8 +755,10 @@
                 <h4>Web 3</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -740,8 +771,10 @@
                 <h4>App 2</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -754,8 +787,10 @@
                 <h4>Card 2</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -768,8 +803,10 @@
                 <h4>Web 2</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -782,8 +819,10 @@
                 <h4>App 3</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -796,8 +835,10 @@
                 <h4>Card 1</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -810,8 +851,10 @@
                 <h4>Card 3</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -824,8 +867,10 @@
                 <h4>Web 3</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
