addded logo and images

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
-            Digital</span><span class="green"> Signage</span> </a></h1>
+      <!-- <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
+            Digital</span><span class="green"> Signage</span> </a></h1> -->
+      <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -603,7 +604,8 @@
               <br>
               <br>
               <h6><b>Wide –Ranging Screen Support</b></h6>
-              <p>From shelf edge to 4k video, Aflax digital signage makes it easy to build high-definition video walls of virtually any size or orientation.</p>
+              <p>From shelf edge to 4k video, Aflax digital signage makes it easy to build high-definition video walls
+                of virtually any size or orientation.</p>
             </div>
             <div class="col-md-2">
               <img width="80" height="80" src="assets/img/features/global.png" alt="" class="img-fluid">
@@ -627,7 +629,8 @@
               <br>
               <br>
               <h6><b>Build Interactive Digital Experiences</b></h6>
-              <p>From interactive kiosks to tablet application, Aflax digital signage makes it easy to build interactive experiences.</p>
+              <p>From interactive kiosks to tablet application, Aflax digital signage makes it easy to build interactive
+                experiences.</p>
             </div>
             <div class="col-md-2">
               <img width="80" height="80" src="assets/img/features/photoshop.png" alt="" class="img-fluid">
@@ -641,14 +644,16 @@
               <br>
               <br>
               <h6><b>External Data feed Triggers </b></h6>
-              <p>From weather to audience measurement data, Aflax digital signage makes it easy to content external triggers to truly converse with individuals.</p>
+              <p>From weather to audience measurement data, Aflax digital signage makes it easy to content external
+                triggers to truly converse with individuals.</p>
             </div>
             <div class="col-md-2">
               <img width="80" height="80" src="assets/img/features/sensor.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Adding Sensor Devices</b></h6>
-              <p>From product located touch sensors to Lift  ‘n’ Learn applications, Aflax digital signage makes it easy to build interactive experiences.</p>
+              <p>From product located touch sensors to Lift ‘n’ Learn applications, Aflax digital signage makes it easy
+                to build interactive experiences.</p>
             </div>
           </div>
         </div>
@@ -664,10 +669,10 @@
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <!-- <li data-filter="*" >All</li> -->
+              <!-- <li data-filter=".filter-app">App</li> -->
+              <li data-filter=".filter-card" class="filter-active">OUR WORK</li>
+              <!-- <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
         </div>
@@ -676,8 +681,8 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
+              <img src="assets/img/digisig1.jpg" class="img-fluid" alt="">
+              <!-- <div class="portfolio-info">
                 <h4>App 1</h4>
                 <p>App</p>
                 <div class="portfolio-links">
@@ -686,11 +691,43 @@
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/digisig2.jpg" class="img-fluid" alt="">
+              <!-- <div class="portfolio-info">
+                <h4>App 1</h4>
+                <p>App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div> -->
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/digisig3.jpg" class="img-fluid" alt="">
+              <!-- <div class="portfolio-info">
+                <h4>App 1</h4>
+                <p>App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div> -->
+            </div>
+          </div>
+
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -816,7 +853,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -829,8 +866,10 @@
       <div class="container">
         <div class="row content text-center">
           <h2>INDUSTRIES</h2>
-          <p>While the idea of switching to digital signage can seem like a big project once implemented it can reap countless rewards for all
-            Types of businesses, whether in be retailer, a hotel, or a company using signs to communicate internal messages.
+          <p>While the idea of switching to digital signage can seem like a big project once implemented it can reap
+            countless rewards for all
+            Types of businesses, whether in be retailer, a hotel, or a company using signs to communicate internal
+            messages.
           </p>
           <br>
           <br>
@@ -843,23 +882,28 @@
               <br>
               <br>
               <h6><b>Retail</b></h6>
-              <p>The retail sector is very popular for digital signage and mortar all wrangling to grab customers, attention. When compared to static signage, digital signage solutions capture 400% more views.</p>
+              <p>The retail sector is very popular for digital signage and mortar all wrangling to grab customers,
+                attention. When compared to static signage, digital signage solutions capture 400% more views.</p>
             </div>
             <div class="col-md-4">
               <img width="80" height="80" src="assets/img/industries/restaurant.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Restaurants & Bars</b></h6>
-              <p>Large fast-food chains have already exploited the tremendous benefits of digital signage. It promotes cross-sells and drives a 31.8% upsell in overall sales volume at point of sale by displaying dynamic and relevant content to your customers.</p>
+              <p>Large fast-food chains have already exploited the tremendous benefits of digital signage. It promotes
+                cross-sells and drives a 31.8% upsell in overall sales volume at point of sale by displaying dynamic and
+                relevant content to your customers.</p>
             </div>
             <div class="col-md-4">
               <img width="80" height="80" src="assets/img/industries/tranportation.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Transportation</b></h6>
-              <p>Airports, train and bus stations and even bus stops have become the most common places to encounter digital signage. For instance, digital signage is ideal for flight and bus information to show arrivals and departures and in duty-free areas of airports for advertising.</p>
+              <p>Airports, train and bus stations and even bus stops have become the most common places to encounter
+                digital signage. For instance, digital signage is ideal for flight and bus information to show arrivals
+                and departures and in duty-free areas of airports for advertising.</p>
             </div>
-            
+
           </div>
           <div class="row">
             <div class="col-md-4">
@@ -867,21 +911,29 @@
               <br>
               <br>
               <h6><b>Healthcare</b></h6>
-              <p>Digital signage is transforming the way that hospitals and healthcare facilities communicate with staff and patients. Whether used for wayfinding or displaying healthcare information, digital signage gives the healthcare industry the ability to engage and interactive with their patients and improve the level of care.</p>
+              <p>Digital signage is transforming the way that hospitals and healthcare facilities communicate with staff
+                and patients. Whether used for wayfinding or displaying healthcare information, digital signage gives
+                the healthcare industry the ability to engage and interactive with their patients and improve the level
+                of care.</p>
             </div>
             <div class="col-md-4">
               <img width="80" height="80" src="assets/img/industries/entertainment.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Entertainment</b></h6>
-              <p>Locations such as theatres, cinemas, Zoos, concert halls and theme parks are ideal settings for digital signage, for example, in these types of environments digital signage can be used as an effective advertising and promotional tools as it has been proven to increase the average purchase amount by 29.5%.</p>
+              <p>Locations such as theatres, cinemas, Zoos, concert halls and theme parks are ideal settings for digital
+                signage, for example, in these types of environments digital signage can be used as an effective
+                advertising and promotional tools as it has been proven to increase the average purchase amount by
+                29.5%.</p>
             </div>
             <div class="col-md-4">
               <img width="80" height="80" src="assets/img/industries/corporate.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Corporate</b></h6>
-              <p>Keeping employees connected is just as important as enhancing customer experiences. In additional, to offering a canvas for unlimited internal communications, internal digital signage can help build staff morale, maximize productivity and enhance employee motivation.</p>
+              <p>Keeping employees connected is just as important as enhancing customer experiences. In additional, to
+                offering a canvas for unlimited internal communications, internal digital signage can help build staff
+                morale, maximize productivity and enhance employee motivation.</p>
             </div>
           </div>
           <div class="row">
@@ -890,21 +942,29 @@
               <br>
               <br>
               <h6><b>Education</b></h6>
-              <p>Educational establishments are ideal environments to get the most out of digital signage. For instance, the most common solution for schools. Colleges. Universities and other training facilities are interactive touch displays, video walls and reception screens.</p>
+              <p>Educational establishments are ideal environments to get the most out of digital signage. For instance,
+                the most common solution for schools. Colleges. Universities and other training facilities are
+                interactive touch displays, video walls and reception screens.</p>
             </div>
             <div class="col-md-4">
               <img width="80" height="80" src="assets/img/industries/hospitality.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Hospitality</b></h6>
-              <p>Hotels, resorts, nightclubs, and catering venues have a captive audience who are looking for information, so they are a natural home for digital signage. Digital posters, advertising displays and reception screens can really make a big difference within a hospitality venue and if used correctly can boost customer satisfaction by 46%.</p>
+              <p>Hotels, resorts, nightclubs, and catering venues have a captive audience who are looking for
+                information, so they are a natural home for digital signage. Digital posters, advertising displays and
+                reception screens can really make a big difference within a hospitality venue and if used correctly can
+                boost customer satisfaction by 46%.</p>
             </div>
             <div class="col-md-4">
               <img width="80" height="80" src="assets/img/industries/logistics.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Logistics</b></h6>
-              <p>Locations such as warehousing, and manufacturing are ideal locations for digital signage. In these types of environment digital signage can be used to inform operatives pending job queues, material preparation and manufacturing instructions as it has been proven to increase the factory throughput by 30%.</p>
+              <p>Locations such as warehousing, and manufacturing are ideal locations for digital signage. In these
+                types of environment digital signage can be used to inform operatives pending job queues, material
+                preparation and manufacturing instructions as it has been proven to increase the factory throughput by
+                30%.</p>
             </div>
           </div>
         </div>
