retail page added

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
           <li class="dropdown"><a href="#"><span>Sector/Solutions</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Retail</a></li>
+              <li><a href="retail.html">Retail</a></li>
               <li><a href="#">Hotels</a></li>
               <li><a href="#">Bar / Restaurants</a></li>
               <li><a href="#">College </a></li>
