--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <li class="dropdown"><a href="#"><span>Sector/Solutions</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="retail.html">Retail</a></li>
-              <li><a href="#">Hotels</a></li>
+              <li><a href="hotels.html">Hotels</a></li>
               <li><a href="#">Bar / Restaurants</a></li>
               <li><a href="#">College </a></li>
               <li><a href="#">University</a></li>
