retail page redesigned

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
               <li><a href="#">Stadium's</a></li>
               <li><a href="#">Telecommunications </a></li>
               <li><a href="#">Banks </a></li>
-              <li><a href="#">Power Electric supplies </a></li>
+              <li><a href="#">Power Electric Supplies </a></li>
               <li><a href="#">Factories </a></li>
-              <li><a href="#">Car show </a></li>
+              <li><a href="#">Car Show </a></li>
               <li><a href="#">Travel Agent </a></li>
               <li><a href="#">Government institutions </a></li>
               <li><a href="#">Construction </a></li>
