half of hotel page done

--- a/retail.html
+++ b/retail.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Blog - Sailor Bootstrap Template</title>
+  <title>Retail</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -89,7 +89,7 @@
           <li class="dropdown"><a href="#"><span>Sector/Solutions</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="retail.html">Retail</a></li>
-              <li><a href="#">Hotels</a></li>
+              <li><a href="hotels.html">Hotels</a></li>
               <li><a href="#">Bar / Restaurants</a></li>
               <li><a href="#">College </a></li>
               <li><a href="#">University</a></li>
