retail page updated

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <ul>
               <li><a href="retail.html">Retail</a></li>
               <li><a href="hotels.html">Hotels</a></li>
-              <li><a href="#">Bar / Restaurants</a></li>
+              <li><a href="restaurants.html">Bar / Restaurants</a></li>
               <li><a href="#">College </a></li>
               <li><a href="#">University</a></li>
               <li><a href="#">Airport</a></li>
