--- a/retail.html
+++ b/retail.html
@@ -90,7 +90,7 @@
             <ul>
               <li><a href="retail.html">Retail</a></li>
               <li><a href="hotels.html">Hotels</a></li>
-              <li><a href="#">Bar / Restaurants</a></li>
+              <li><a href="restaurants.html">Bar / Restaurants</a></li>
               <li><a href="#">College </a></li>
               <li><a href="#">University</a></li>
               <li><a href="#">Airport</a></li>
@@ -175,8 +175,61 @@
 
   <main id="main">
 
+    <!-- ======= Hero Section ======= -->
+  <section id="hero">
+    <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
+
+      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+
+      <div class="carousel-inner" role="listbox">
+
+        <!-- Slide 1 -->
+        <div class="carousel-item active" style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
+          <div class="carousel-container">
+            <div class="container">
+              <h2 class="animate__animated animate__fadeInDown">
+                Are you looking to create a dynamic in-store experience with Digital Store Signage? 
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 2 -->
+        <div class="carousel-item" style="background-image: url(assets/img/retail/cover_image_1613400805.jpg.760x400_q85_crop_upscale.jpg)">
+          <div class="carousel-container">
+            <div class="container">
+              <h2 class="animate__animated animate__fadeInDown">
+                Aflax will provide you with a solution that promises to increase customer engagement and boost sales.
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 3 -->
+        <div class="carousel-item" style="background-image: url(assets/img/retail/DS-1024x812.jpg)">
+          <div class="carousel-container">
+            <div class="container">
+              <h2 class="animate__animated animate__fadeInDown">Put your
+                customers in the mood to buy.
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+      </a>
+
+      <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+      </a>
+
+    </div>
+  </section><!-- End Hero -->
+
     <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
+    <!-- <section id="breadcrumbs" class="breadcrumbs">
       <div class="container mt-5">
 
         <div class="d-flex justify-content-between align-items-center">
@@ -188,15 +241,16 @@
         </div>
 
       </div>
-    </section><!-- End Breadcrumbs -->
+    </section> -->
+    <!-- End Breadcrumbs -->
 
-    <section>
+    <!-- <section>
       <div class="container">
         <h1 class="display-6 text-center">Are you looking to create a dynamic in-store experience with Digital Store
           Signage? Aflax will provide you with a solution that promises to increase customer engagement and boost sales.
         </h1>
       </div>
-    </section>
+    </section> -->
 
     <!-- ======= About Digital Signage Section ======= -->
     <div id="carouselExampleIndicators" class="carousel slide" data-interval="false">
