hotel page redesigned

--- a/hotels.html
+++ b/hotels.html
@@ -175,8 +175,62 @@
 
   <main id="main">
 
+    <!-- ======= Hero Section ======= -->
+  <section id="hero">
+    <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
+
+      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+
+      <div class="carousel-inner" role="listbox">
+
+        <!-- Slide 1 -->
+        <div class="carousel-item active" style="background-image: url(assets/img/hotels/88641805.jpg)">
+          <div class="carousel-container">
+            <div class="container">
+              <h2 class="animate__animated animate__fadeInDown">
+                Enrich your guests’ hospitality experience whilst enhancing your venue’s sophistication with Aflax ’s digital signage solutions.
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 2 -->
+        <div class="carousel-item" style="background-image: url(assets/img/hotels/credit-union-digital-sign-c727bcc505819a07c9ee2519c82ecca7582d9ba5a558f19587eede732d659965.jpg)">
+          <div class="carousel-container">
+            <div class="container">
+              <h2 class="animate__animated animate__fadeInDown">
+                Transform your lobby by replacing static posters and notices with a led signage board.
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 3 -->
+        <div class="carousel-item" style="background-image: url(assets/img/hotels/Travel.jpg)">
+          <div class="carousel-container">
+            <div class="container">
+              <h2 class="animate__animated animate__fadeInDown">
+                At Aflax, we enable our clients in the hospitality sector to provide interactive Digital Hotel wayfinding Displays and digital directories.
+              </h2>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+      </a>
+
+      <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+      </a>
+
+    </div>
+  </section><!-- End Hero -->
+
     <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
+    <!-- <section id="breadcrumbs" class="breadcrumbs">
       <div class="container mt-5">
 
         <div class="d-flex justify-content-between align-items-center">
@@ -188,15 +242,16 @@
         </div>
 
       </div>
-    </section><!-- End Breadcrumbs -->
+    </section> -->
+    <!-- End Breadcrumbs -->
 
-    <section>
+    <!-- <section>
       <div class="container">
         <h1 class="display-6 text-center">Enrich your guests’ hospitality experience whilst enhancing your venue’s
           sophistication with Aflax ’s digital signage solutions.
         </h1>
       </div>
-    </section>
+    </section> -->
 
     <!-- ======= Start Hotel Carousel Section ======= -->
     <div id="carouselExampleIndicators" class="carousel slide" data-interval="false">
