initial setup of education page

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
               <li><a href="retail.html">Retail</a></li>
               <li><a href="hotels.html">Hotels</a></li>
               <li><a href="restaurants.html">Bar / Restaurants</a></li>
-              <li><a href="#">College </a></li>
-              <li><a href="#">University</a></li>
+              <li><a href="education.html">Education</a></li>
               <li><a href="#">Airport</a></li>
               <li><a href="#">Hospitals</a></li>
               <li><a href="#">Event places </a></li>
